added simple move and lights

--- a/index.html
+++ b/index.html
@@ -15,23 +15,8 @@
 			</div>
 		</div>
 		<div class="transport__controls">
-			<div class="transport__controls-keys">
-				<p class="transport__control-key control-w">W</p>
-				<br>
-				<p class="transport__control-key control-a">A</p>
-				<p class="transport__control-key control-s">S</p>
-				<p class="transport__control-key control-d">D</p>
-			</div>
-			<div class="transport__controls-keys">
-				<p class="transport__control-key control-space">space</p>
-			</div>
-			<div class="transport__controls-arrows">
-				<p class="transport__control-arrow control-top"></p>
-				<br>
-				<p class="transport__control-arrow control-left"></p>
-				<p class="transport__control-arrow control-bottom"></p>
-				<p class="transport__control-arrow control-right"></p>
-			</div>
+			<canvas id="trsp_ctrl_canvas" class="transport__controls-canvas" width="280px" height="580px"></canvas>
+			Speed - <span id="speed"></span> kph
 		</div>
 	</div>
 
